# discovery-engines

./: .gitignore  About.html  About.txt  Makefile  README.md
cctw-diffs/: diff.txt
cctw-mock/case-1/: .gitignore  About.html  About.txt  cctw.swift  data.txt  merge.sh  mkppm.sh  nxs2eps.sh  nxs2ppm.sh  run-cctw-nxrs.sh  run.sh  setup.sh  transform.sh  upload-www.zsh
cctw-mock/case-2/: cctw.swift
cctwp/: cctw-merge.zsh  cctw-split.zsh  cctw-xform.zsh
data/: pads.list
demos/swift-mpi/: About.txt  Makefile  demo.swift  run.sh  user.c  user.h  user.tcl
imgs/: NeXpy-procs.odg  bragg-peak.xcf  cctw-transform.xcf  de-title.xcf  diffev-fit.xcf  diffev.xcf  laptop-www.xcf  nexpy.xcf  scattering-laptop.xcf  sprocket-small.xcf  sprocket.xcf  telescope-small.xcf  telescope.xcf  www-1-small.xcf
imgs/sharma-hex/: Sharma-April14.tiff  Sharma-Oct13.tiff  Sharma.xcf
installers/: conda-chess.sh
lib/: catalog.zsh  helpers.zsh
lists/: list-lsmo42_150k
lists/bigdata/: list-all.txt  list-broken.txt  list-remainder.txt  list10.txt  list11.txt  list6.txt  list7.txt  list8.txt  list9.txt
lists/data/: list-all.txt  list-broken.txt  list-lsmo39_100k.txt  list-test.txt  list1.txt  list2.txt  list3.txt  list4.txt  list5.txt
lists/wozniak-debug/: list-lsmo39_130k.txt  list-lsmo48_400k.orig.txt
mt2/: .gitignore  Makefile
nexpyro/greeting/: About.txt  client.py  greeting.py
nexus/swift/: .gitignore  merge-all-swift-login.zsh  (+6 more)
nfhedm/: .gitignore  Makefile  Makefile.in  a.out  autogen.sh  configure.ac  convert.out  make-package.tcl  out.data  pi.c  pkgIndex.tcl  runCode.sh
nfhedm/e2e/: control.sh  install.sh  install.zsh  run-remote.sh
nfhedm/e2e/tests/test-coasters-ssh/: run.zsh
nfhedm/e2e/tests/test-ssh/: install.zsh  run-remote-swift-t.sh  run-remote-swift-t.zsh
nfhedm/maint/: find-tcl.m4  find-tcl.zsh
nfhedm/src/: .gitignore  CalcDiffractionSpots.c  CalcDiffractionSpots.h  Convert-Bin-L2N.c  Convert-Bin-L2T.c  Convert-Dbls2HDF.c  Debug.c  Debug.h  FitOrientation-main.c  FitOrientation.c  FitOrientation.h  FitOrientationParametersNLOpt-main.c  FitOrientationParametersNLOpt.c  FitOrientationParametersNLOpt.h  GenerateRingInfo.c  ImageProcessing.c  ImageProcessingAll.sh  MakeDiffrSpots.c  MakeHexGrid.c  MedianImage.c  SharedFuncsFit.c  SharedFuncsFit.h  checks.h  midaco.c  nfhedm-math.c  nfhedm-math.h  nfhedm.i  parameters.c  parameters.h  placebo.c  placebo.h  placebo.i  placebo_wrap.c  swift-bindings.c  swift-bindings.h
nfhedm/swift/: .gitignore  FitOrientation-T-BGQ.sh  FitOrientation-T.sh  FitOrientation-T.swift  ImageProcessing.sh  MedianImage.sh  ProcessImages.swift  cf  convert-bin-l2n.sh  convert-bin-l2n.swift  hook.tcl  runImages.sh  settings-bgq.sh  sites.xml  tc  test-0.sh  test-0.swift  test-1-bgq.sh  test-1.sh  test-1.swift  test-2-bgq.sh  test-2-tukey.sh  test-2.sh  test-2.swift  test-swift-0.sh
nfhedm/tcl/: nfhedm.tcl
nfhedm/tests/: run-tests.zsh  test-1.sh  test-fo.tcl  test-placebo.c  test-placebo.tcl
nfhedm/tools/: write.c
plots/: events-convert.tcl  events-reduce.tcl
presentations/: tao-fusion-v2.pptx  wozniak-lbl.pptx
sro/: .gitignore  Makefile  cfg.h  create-data.py  defns.h  io.f90  main.f90  pysro.py  sro-calc.f90  sro-defn.f90  sro-helpers.c  sro.f90  sro.h  sro.i  test-c-sro.c  test-sro-py.sh  test-sro.py
swift/: merge-all-swift-tukey.zsh  merge-all.swift
swift-ga/: box.py  cfg.py  clean.sh  ga-1.swift  generate_hdf.py  nobody.winner  program.sh  select.py
www/: DE.odg
(+68 files in other folders)
